--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,25 @@
 version: '3.7'
 
 services:
+  nginx:
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile.dev
+    ports:
+      - '80:80'
+    links:
+      - backend:backend
+      - frontend:frontend
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile.dev
+    environment:
+      - NODE_ENV=development
+    volumes:
+      - ./frontend:/usr/src/frontend
+    ports:
+      - '3000:3000'
   backend:
     build: ./backend
     command: python manage.py runserver 0.0.0.0:8000
