--- a/nginx/nginx.dev.conf
+++ b/nginx/nginx.dev.conf
@@ -1,32 +1,60 @@
-  upstream backend{
-      least_conn;
-      server backend:8000 max_fails=3 fail_timeout=30s;
-  }
-
-  upstream frontend{
-      least_conn;
-      server frontend:3000 max_fails=3 fail_timeout=30s;
-  }
-
-  location / {
-      proxy_pass http://frontend;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection 'upgrade';
-      proxy_set_header Host $host;
-      proxy_cache_bypass $http_upgrade;
-      break;
-  }
-
-  location ~ /api/(?<url>.*) {
-      proxy_pass http://backend/$url;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection 'upgrade';
-      proxy_set_header Host $host;
-      proxy_cache_bypass $http_upgrade;
-  }
-
-  location ~* \.(eot|otf|ttf|woff|woff2)$ {
-      add_header Access-Control-Allow-Origin *;
-  }
+worker_processes 1;
+events {
+    worker_connections 1024;
+}
+http {
+    sendfile on;
+    keepalive_timeout 65;
+    client_max_body_size 5M;
+    gzip on;
+    gzip_disable "msie6";
+    gzip_vary on;
+    gzip_proxied any;
+    gzip_comp_level 6;
+    gzip_buffers 16 8k;
+    gzip_http_version 1.1;
+    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
+    deny 23.27.103.106/32;
+    upstream backend {
+        least_conn;
+        server backend:8000 max_fails=3 fail_timeout=30s;
+    }
+    upstream frontend {
+        least_conn;
+        server frontend:3000 max_fails=3 fail_timeout=30s;
+    }
+    server {
+        listen 80 default_server;
+        listen [::]:80 default_server;
+        if ($request_method = 'OPTIONS') {
+            return 200;
+        }
+        root /var/www/html;
+        index index.html;
+        error_page 405     =200 $uri;
+        location / {
+            proxy_pass http://frontend;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            break;
+        }
+        location ~* \.(eot|otf|ttf|woff|woff2)$ {
+            add_header Access-Control-Allow-Origin *;
+        }
+        location ~ /api/(?<url>.*) {
+            proxy_pass http://backend/$url;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+        }
+        location /health-check {
+            return 200;
+            access_log off;
+        }
+    }
+}
